<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondPage">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="371dp"
        android:layout_height="78dp"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/simple_loan_calculator"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="371dp"
        android:layout_height="52dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/loan_amount_rm"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextNumberDecimal1"
        android:layout_width="371dp"
        android:layout_height="52dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/interest_rate_per_year"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

    <EditText
        android:id="@+id/editTextNumberDecimal3"
        android:layout_width="371dp"
        android:layout_height="52dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/how_many_years"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="237dp"
        android:backgroundTint="#D5D6D6"
        android:foregroundTint="#000000"
        android:textColor="@color/black"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="237dp"
        android:backgroundTint="#D5D6D6"
        android:foregroundTint="#000000"
        android:textColor="@color/black"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3" />

</androidx.constraintlayout.widget.ConstraintLayout>